--- a/MVC/Views/JobOffer/Index.cshtml
+++ b/MVC/Views/JobOffer/Index.cshtml
@@ -12,6 +12,9 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
+            <th>City</th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -24,8 +27,14 @@
             <td>
                 @item.Name
             </td>
+            <td>
+                @item.City
+            </td>
             <td style="float: right;">
-                @Html.ActionLink("Delete", "DeleteJobOffer", "JobOffer", new { id=item.Id }, new { @class = "btn btn-primary" })
+                @Html.ActionLink("Delete", "DeleteJobOffer", "JobOffer", new { id = item.Id }, new { @class = "btn btn-primary" })
+            </td>
+            <td style="float: right;">
+                @Html.ActionLink("Detail", "JobOfferDetail", "JobOffer", new { id = item.Id }, new { @class = "btn btn-primary" })
             </td>
         </tr>
     }
