--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Bröther, can I have jöb?</h1>
-    <img src="job_logo.png"/>
+    <img src="/job_logo.png"/>
 </div>
