--- a/MVC/Views/JobOffer/AddJobOffer.cshtml
+++ b/MVC/Views/JobOffer/AddJobOffer.cshtml
@@ -23,16 +23,18 @@
             </div>
 
             <h5>Relevant skills</h5>
-            <div id="skillsEditor">
+            <div id="skillsEditor" class="form-group">
                 @for (int i = 0; i < Model.RelevantSkills.Count; i++)
                 {
-                    @Html.TextBoxFor(model => model.RelevantSkills[i], new { placeholder = "Skill", required = true, maxlength = 64 })
+                    <div class="form-group">
+                        @Html.TextBoxFor(model => model.RelevantSkills[i], new { placeholder = "Skill", required = true, maxlength = 64 })
+                    </div>
                 }
                 <input type="submit" formaction="AddNewSkill" value="Add new skill" class="btn btn-primary" />
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create job offer" class="btn btn-primary" />
             </div>
         </form>
     </div>
