--- a/MVC/Views/JobOffer/JobOfferDetail.cshtml
+++ b/MVC/Views/JobOffer/JobOfferDetail.cshtml
@@ -17,7 +17,7 @@
     <h5>Relevant skills</h5>
     @foreach (var skill in Model.RelevantSkills)
     {
-        <text>@skill </text>
+        <div class="btn btn-secondary">@skill </div>
     }
 </div>
 
