--- a/MVC/Views/JobOffer/AddJobOffer.cshtml
+++ b/MVC/Views/JobOffer/AddJobOffer.cshtml
@@ -21,16 +21,25 @@
                 <h5>Description</h5>
                 @Html.TextAreaFor(model => model.Description, new { placeholder = "Description", required = true, maxlength = 1024, rows = 10, cols = 100 })
             </div>
-
             <h5>Relevant skills</h5>
-            <div id="skillsEditor" class="form-group col-10">
+            <div id="skillsEditor" class="form-group">
                 @for (int i = 0; i < Model.RelevantSkills.Count; i++)
                 {
                     <div class="form-group">
                         @Html.TextBoxFor(model => model.RelevantSkills[i], new { placeholder = "Skill", required = true, maxlength = 64 })
                     </div>
                 }
-                <input type="submit" formaction="AddNewSkill" value="Add new skill" class="btn btn-secondary" />
+                <input type="submit" formaction="AddNewSkill" value="Add new skill" class="btn btn-secondary"/>
+            </div>
+            <h5>Relevant skills</h5>
+            <div id="questionsEditor" class="form-group">
+                @for (int i = 0; i < Model.Questions.Count; i++)
+                {
+                    <div class="form-group">
+                        @Html.TextBoxFor(model => model.Questions[i].Text, new { placeholder = "Question", required = true, maxlength = 1024 })
+                    </div>
+                }
+                <input type="submit" formaction="AddNewQuestion" value="Add new question" class="btn btn-secondary"/>
             </div>
 
             <div class="form-group">
