--- a/MVC/Views/JobOffer/Index.cshtml
+++ b/MVC/Views/JobOffer/Index.cshtml
@@ -12,6 +12,7 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
+            <th>Company</th>
             <th>City</th>
             <th></th>
         </tr>
@@ -25,6 +26,9 @@
             </td>
             <td>
                 @item.Name
+            </td>
+            <td>
+                @item.Company.Name
             </td>
             <td>
                 @item.City
