--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bröther, can I have jöb?</h1>
+    <h1 class="display-4">Bröther, can I hav jöb?</h1>
     <img src="/job_logo.png"/>
 </div>
