--- a/MVC/Views/JobOffer/JobOfferDetail.cshtml
+++ b/MVC/Views/JobOffer/JobOfferDetail.cshtml
@@ -6,6 +6,10 @@
 </h4>
 <hr />
 <div>
+    <h5>Company</h5>
+    <p>@Html.DisplayFor(model => model.Company.Name)</p>
+</div>
+<div>
     <h5>City</h5>
     <p>@Html.DisplayFor(model => model.City)</p>
 </div>
