Fix button color

--- a/MVC/Views/User/Register.cshtml
+++ b/MVC/Views/User/Register.cshtml
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="row">
-                <input type="submit" name="Register" method="post" value="Register" class="btn orange col s12" />
+                <input type="submit" name="Register" method="post" value="Register" class="btn btn-primary col s12" />
             </div>
         }
     </div>
