--- a/MVC/Views/User/Login.cshtml
+++ b/MVC/Views/User/Login.cshtml
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="row">
-                <input type="submit" name="Login" method="post" value="Log In" class="btn orange col s12" />
+                <input type="submit" name="Login" method="post" value="Log In" class="btn btn-primary col s12" />
             </div>
         }
     </div>
