--- a/MVC/Views/JobSeeker/EditJobSeeker.cshtml
+++ b/MVC/Views/JobSeeker/EditJobSeeker.cshtml
@@ -9,6 +9,7 @@
         <form asp-action="EditJobSeeker" method="post">
             @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div>@Html.HiddenFor(model => model.Id)</div>
             <div class="form-group">
                 <h5>Name</h5>
                 @Html.TextBoxFor(model => model.Name, new { placeholder = "Name", required = true, maxlength = 64 })
@@ -31,7 +32,7 @@
                 }
                 <input type="submit" name="skill" formaction="AddNewSkill" formmethod="post" value="Add new skill" class="btn btn-secondary" />
             </div>
-            <div>@Html.HiddenFor(x => x.UserId)</div>
+            <div>@Html.HiddenFor(model => model.UserId)</div>
             <div class="form-group">
                 <input type="submit" name="EditJobSeeker" method="post" value="Confirm changes" class="btn btn-primary" />
             </div>
