--- a/MVC/Views/JobOffer/Index.cshtml
+++ b/MVC/Views/JobOffer/Index.cshtml
@@ -3,14 +3,17 @@
 @{
     ViewData["Title"] = "Job Offers";
 }
-<p>
-    @Html.ActionLink("Add job offer", "AddJobOffer", "JobOffer", 0, new { @class = "btn btn-primary" })
-</p>
-<h4>All offers</h4>
+
+@if (User.IsInRole("Company"))
+{
+    <p>
+        @Html.ActionLink("Add job offer", "AddJobOffer", "JobOffer", 0, new { @class = "btn btn-primary" })
+    </p>
+}
+<h4>Job offers</h4>
 <table class="table">
     <thead>
         <tr>
-            <th>Id</th>
             <th>Name</th>
             <th>Company</th>
             <th>City</th>
@@ -22,9 +25,6 @@
     {
         <tr>
             <td>
-                @item.Id
-            </td>
-            <td>
                 @item.Name
             </td>
             <td>
@@ -35,7 +35,10 @@
             </td>
             <td style="float: right;">
                 @Html.ActionLink("Detail", "JobOfferDetail", "JobOffer", new { id = item.Id }, new { @class = "btn btn-primary" })
-                @Html.ActionLink("Delete", "DeleteJobOffer", "JobOffer", new { id = item.Id }, new { @class = "btn btn-primary" })
+                @if (User.IsInRole("Company"))
+                {
+                    @Html.ActionLink("Delete", "DeleteJobOffer", "JobOffer", new { id = item.Id }, new { @class = "btn btn-primary" })
+                }
             </td>
         </tr>
     }
