--- a/MVC/Views/JobOffer/EditJobOffer.cshtml
+++ b/MVC/Views/JobOffer/EditJobOffer.cshtml
@@ -38,9 +38,11 @@
             <div id="questionsEditor" class="form-group">
                 @for (int i = 0; i < Model.Questions.Count; i++)
                 {
-        <div class="form-group">
-            @Html.TextBoxFor(model => model.Questions[i].Text, new { placeholder = "Question", required = true, maxlength = 1024 })
-        </div>}
+                    <div>@Html.HiddenFor(model => model.Questions[i].Id)</div>
+                    <div class="form-group">
+                        @Html.TextBoxFor(model => model.Questions[i].Text, new { placeholder = "Question", required = true, maxlength = 1024 })
+                    </div>
+                }
             <input type="submit" name="question" formaction="/JobOffer/AddNewQuestion" formmethod="post" value="Add new question" class="btn btn-secondary" />
             </div>
 
