--- a/MVC/Views/JobSeeker/AddJobSeeker.cshtml
+++ b/MVC/Views/JobSeeker/AddJobSeeker.cshtml
@@ -19,15 +19,16 @@
             </div>
             <div class="form-group">
                 <h5>E-mail</h5>
-                @Html.TextBoxFor(model => model.Email, new { placeholder = "E-mail", required = true, type = "email", maxlength = 64 })
+                @Html.TextBoxFor(model => model.Email, new { placeholder = "E-mail", type = "email", required = true, maxlength = 64 })
+                @Html.ValidationMessageFor(model => model.Email)
             </div>
             <h5>Skills</h5>
             <div id="skillsEditor" class="form-group">
                 @for (int i = 0; i < Model.Skills.Count; i++)
                 {
-                    <div class="form-group">
-                        @Html.TextBoxFor(model => model.Skills[i], new { placeholder = "Skill", required = true, maxlength = 64 })
-                    </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(model => model.Skills[i], new { placeholder = "Skill", required = true, maxlength = 64 })
+                </div>
                 }
                 <input type="submit" name="skill" formaction="AddNewSkill" formmethod="post" value="Add new skill" class="btn btn-secondary" />
             </div>
