--- a/MVC/Views/User/Register.cshtml
+++ b/MVC/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@using DAL.Enums
+@using DAL.Enums
 @using System.Web.Mvc.Html
 @using Microsoft.AspNetCore.Mvc.Rendering
 @model Business.DTOs.UserRegisterDto
@@ -6,31 +6,31 @@
                 Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <div class="row">
-    <div class="col s12">
+    <div class="col">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-            <p class="text-red">@Html.ValidationSummary(true, "")</p>
-            <div class="row valign-wrapper">
-                <div class="col s12 l4">Username:</div>
-                <div class="input-field col s12 l8">
-                    @Html.TextBoxFor(model => model.Name, new { placeholder = "Name", required = true })
-                </div>
-            </div>
-            <div class="row valign-wrapper">
-                <div class="col s12 l4">Password:</div>
-                <div class="input-field col s12 l8">
-                    @Html.PasswordFor(model => model.Password, new { placeholder = "Password", required = true })
-                </div>
-            </div>
-            <div class="row valign-wrapper">
-                <div class="col s12 l4">Role:</div>
-                <div class="dropdown col s12 l8">
-                    @Html.DropDownList("Role", Html.GetEnumSelectList(typeof(Roles)))
+            <p>@Html.ValidationSummary( "")</p>
+            <div class="row">
+                <div class="col">Username:</div>
+                <div class="col">
+                    @Html.TextBoxFor(model => model.Name, new { placeholder = "Name", required = true, maxlength = 64 })
                 </div>
             </div>
             <div class="row">
-                <input type="submit" name="Register" method="post" value="Register" class="btn btn-primary col s12" />
+                <div class="col">Password:</div>
+                <div class="col">
+                    @Html.PasswordFor(model => model.Password, new { placeholder = "Password", required = true, maxlength = 64 })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">Role:</div>
+                <div class="dropdown col">
+                    @Html.DropDownList("Role", Html.GetEnumSelectList(typeof(Roles)))
+                </div>
+            </div>
+            <div>
+                <input type="submit" name="Register" method="post" value="Register" class="btn btn-primary" />
             </div>
         }
     </div>
